--- a/MY GALLERY .HTML
+++ b/MY GALLERY .HTML
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -21,7 +22,7 @@
 <img src="https://s-media-cache-ak0.pinimg.com/736x/b6/eb/1b/b6eb1b77ee9d93fe3084e644a2f952d6.jpg">
 <img src="https://d3ntrvodlhqdrx.cloudfront.net/p/8145-24206-tm_home_default/outre-x-pressions-crochet-braid-dominican-blow-out-straight-14.jpg">
 <img src="https://s-media-cache-ak0.pinimg.com/236x/7b/3e/83/7b3e83276af23087e8537017e09c18db.jpg">
-
+<img src="/home/nosi/Pictures/images.jpg">
 
 
 </body>
