--- a/NOSIE.HTML
+++ b/NOSIE.HTML
@@ -28,14 +28,15 @@ body {
 </header>
 <nav>
 
-<li><a href="home.html">Home</a><li>
+<li><a href="MY HOME.HTML">MY HOME</a><li>
 <li><a href="contact.html">Contact</a><li>
-<li><a href="gallery.html">Gallery</a><li>
-<li><a href="hairstyles and prices.html">Hairstyle and prices</a><li>
+<li><a href="MY GALLERY.HTML">MY GALLERY</a><li>
+<li><a href="STYLE AND PRICERS.HTML">STYLE AND PRICERS</a><li>
 </nav> 
-<img src="/home/quirky/Desktop/hair salon pic">
+<img src="/home/nosi/Desktop/hair salon pictures_files/customer-having-her-hair-done-in-township-hair-salon-alexand.jpg">
+
+
+
    		
 </body>
 </html>
-
-
