--- a/hair&price.html
+++ b/hair&price.html
@@ -1,18 +1,21 @@
-<!Doctype html>
+
+<!DOCTYPE html>
 <html>
 <head>
 	<title>STYLES AND PRICES</title>
 	<style>
-h1 {
+	 {    
 
 	font-size: 15px;
 }
-
+body{
+	background-color:pink;
+}
 
 	</style>
 </head>
-<h1>[STYLES AND PRICES]<h1>
-	<ul>
+<h3>STYLES AND PRICES<h3>
+	<ol>
 
 <li>DA BRAIDS=R300</li>
 <li>STRAIGHT UP=R200</li>
@@ -20,18 +23,23 @@ h1 {
 <li>STRAIGHT BACK=R150</li>
 <li>BOBCUT=R200</li>
 <li>BONDING=R300</li>
-</ul>
+<li>DREAD LOCKS=R300&R120</li>
+<li>PONY TAIL=R150</li>
+<li>WOOL DREADS=R150</li>
+</ol>
 
-<h1>[RELAXER PRODUCTS]</h1>	
+<h1>RELAXER PRODUCTS</h1>	
 <ol>
-
+<h1></h1>
 <li>ORGANIC=R90</li>
 <li>EASY WAVES=R50</li>
 <li>SOFT N FREE=50</li>
 <li>AMARELLA=R100</li>
 <li>DARK and LOVELY=R100</li>
-<li>RESTORE=R50</li>	
-
+<li>RESTORE=R50</li>
+<li>TREATMENT=R50</li>
+<li>WASH=R30</li>
+<li>BLOW OUT=R50</li>
 </ol>
 
 </body>
